test/corpus/double_index.txt
====================
Double index
====================

x[1+2][3];

---

(source_file
  (expression_statement
    (index_expression
      (index_expression
        (identifier)
        (single_index
          (binary_expression 
            (integer_literal) 
            (integer_literal)
          )
        )
      )
      (single_index (integer_literal))
    )
  )
)
