test/corpus/if.txt
==============
Double strings
==============

"#" and id("."); 
"id >> print('hej')";
'id' >> print('hej');

---

(source_file
  (expression_statement
    (binary_expression
      (string_literal)
      (call_expression (identifier) (arguments (string_literal)))
    )
  )
  (expression_statement (string_literal))
  (expression_statement
    (pipe_expression 
      (string_literal) 
      (call_expression (identifier) (arguments (string_literal)))
    )
  )
)
