test/corpus/init_pipe.txt
====================
Init pipe expression
====================

xs >> map(\>> foo >> 1);

---

(source_file
  (expression_statement (pipe_expression
    (identifier)
    (call_expression (identifier) (arguments
      (init_pipe_expression
        (pipe_expression (identifier) (integer_literal))
      )
    ))
  ))
)
