test/corpus/list_slice_comp.txt
===================
List slice creation
===================

[1:x];

---

(source_file
  (expression_statement
    (list_comp_expression (nonempty_range_index (integer_literal) (identifier) ) )
  )
)
