test/corpus/pipe_slice.txt
====================
Pipe slice associativity
====================

split("\n") >> [1:] >> map(ints);

---

(source_file
  (expression_statement 
    (pipe_expression
      (pipe_expression
        (call_expression
          (identifier)
          (arguments
            (string_literal)))
        (range_index (integer_literal))
      )
      (call_expression
        (identifier)
        (arguments
          (identifier)
        )
      )
    )
  )
)
