test/corpus/tricky_if.txt
====================
Tricky if expression
====================

if true [1];

---

(source_file
  (expression_statement
    (if_expression (boolean_literal) (list_expression (integer_literal)))
  )
)
