test/corpus/tricky_if2.txt
======================
Tricky if expression 2
======================

if true[1] in;

---

(source_file
  (expression_statement
    (if_expression 
      (index_expression (boolean_literal) (single_index (integer_literal))) 
      (identifier)
    )
  )
)
